--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@types/js-cookie": "3.0.6",
-    "@zuzjs/core": "workspace:*",
+    "@zuzjs/core": "^0.1.9",
     "@zuzjs/store": "^0.1.6",
     "@zuzjs/ui": "^0.8.9",
     "js-cookie": "^3.0.5",
