--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-ts",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "private": true,
   "scripts": {
     "css-fix": "sudo npm i -g style-loader css-loader sass-loader",
@@ -12,25 +12,25 @@
   },
   "dependencies": {
     "@types/js-cookie": "3.0.6",
-    "@zuzjs/core": "^0.2.3",
+    "@zuzjs/core": "^0.2.4",
     "@zuzjs/store": "^0.1.6",
-    "@zuzjs/ui": "^0.9.6",
+    "@zuzjs/ui": "^0.9.7",
     "js-cookie": "^3.0.5",
-    "next": "15.3.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "next": "15.5.2",
+    "react": "^19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@types/node": "^24.0.3",
-    "@types/react": "^19.1.7",
+    "@types/node": "24.3.1",
+    "@types/react": "19.1.12",
     "@types/react-dom": "^19.1.6",
     "concurrently": "^9.1.2",
     "css-loader": "^7.1.2",
-    "eslint": "^9.29.0",
-    "eslint-config-next": "15.3.3",
+    "eslint": "9.35.0",
+    "eslint-config-next": "15.5.2",
     "sass": "^1.85.1",
     "style-loader": "^4.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "5.9.2"
   }
 }
