--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "frontend-ts",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "private": true,
   "scripts": {
     "css-fix": "sudo npm i -g style-loader css-loader sass-loader",
-    "dev": "concurrently \"zuzjs\" \"node zuz.js mode=dev dir=.next.dev\" \"next dev -p 3000\"",
+    "dev": "concurrently \"zuzjs\" \"node zuz.js mode=dev dir=.next.dev\" \"next dev -p 3000 --webpack\"",
     "build": "node zuz.js mode=prod dir=.next.build && next build",
     "start": "next start -p 3000",
     "lint": "next lint",
@@ -12,25 +12,25 @@
   },
   "dependencies": {
     "@types/js-cookie": "3.0.6",
-    "@zuzjs/core": "^0.2.4",
+    "@zuzjs/core": "^0.2.7",
     "@zuzjs/store": "^0.1.6",
-    "@zuzjs/ui": "^0.9.8",
+    "@zuzjs/ui": "^0.9.9",
     "js-cookie": "^3.0.5",
-    "next": "15.5.3",
-    "react": "^19.1.1",
-    "react-dom": "19.1.1"
+    "next": "16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@types/node": "24.5.2",
-    "@types/react": "19.1.13",
-    "@types/react-dom": "19.1.9",
+    "@eslint/eslintrc": "^3.3.3",
+    "@types/node": "25.0.1",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "concurrently": "^9.1.2",
     "css-loader": "^7.1.2",
-    "eslint": "9.35.0",
-    "eslint-config-next": "15.5.2",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.0.10",
     "sass": "^1.85.1",
     "style-loader": "^4.0.0",
-    "typescript": "5.9.2"
+    "typescript": "5.9.3"
   }
 }
