--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "jsxImportSource": "react",
     "incremental": true,
     /* Linting */
@@ -40,7 +40,8 @@
     ".next.dev/types/**/*.ts",
     ".next/types/**/*.ts",
     "next-env.d.ts",
-    ".next.build/types/**/*.ts"
+    ".next.build/types/**/*.ts",
+    ".next.dev/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
