--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "frontend-ts",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "private": true,
   "scripts": {
     "css-fix": "sudo npm i -g style-loader css-loader sass-loader",
     "dev": "concurrently \"zuzjs\" \"node zuz.js mode=dev dir=.next.dev\" \"next dev -p 3000 --webpack\"",
-    "build": "node zuz.js mode=prod dir=.next.build && next build",
+    "build": "node zuz.js mode=prod dir=.next.build && next build --webpack",
     "start": "next start -p 3000",
     "lint": "next lint",
     "prepare": "husky"
@@ -14,7 +14,7 @@
     "@types/js-cookie": "3.0.6",
     "@zuzjs/core": "^0.2.7",
     "@zuzjs/store": "^0.1.6",
-    "@zuzjs/ui": "^0.10.0",
+    "@zuzjs/ui": "^0.10.1",
     "js-cookie": "^3.0.5",
     "next": "16.1.0",
     "react": "^19.2.3",
