--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,8 @@
     ".next/types/**/*.ts",
     "next-env.d.ts",
     ".next.build/types/**/*.ts",
-    ".next.dev/dev/types/**/*.ts"
+    ".next.dev/dev/types/**/*.ts",
+    ".next.build/dev/types/**/*.ts",
   ],
   "exclude": [
     "node_modules"
