--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "frontend-ts",
-  "version": "0.3.3",
+  "version": "1.0.3",
   "private": true,
   "scripts": {
     "css-fix": "sudo npm i -g style-loader css-loader sass-loader",
-    "dev": "concurrently \"zuzjs\" \"node zuz.js mode=dev dir=.next.dev\" \"next dev -p 3000 --webpack\"",
+    "dev": "concurrently \"zuzjs watch\" \"node zuz.js mode=dev dir=.next.dev\" \"next dev -p 3000 --webpack\"",
     "build": "node zuz.js mode=prod dir=.next.build && next build --webpack",
     "start": "next start -p 3000",
     "lint": "next lint",
@@ -12,26 +12,27 @@
   },
   "dependencies": {
     "@types/js-cookie": "3.0.6",
-    "@zuzjs/core": "^0.3.0",
+    "@zuzjs/core": "^0.3.2",
+    "@zuzjs/hooks": "^0.1.2",
     "@zuzjs/store": "^0.1.6",
-    "@zuzjs/ui": "^0.10.6",
+    "@zuzjs/ui": "^1.0.4",
     "js-cookie": "^3.0.5",
     "next": "16.1.6",
-    "react": "^19.2.4",
-    "react-dom": "19.2.4"
+    "react": "^19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
-    "@types/node": "25.0.10",
-    "@types/react": "19.2.10",
+    "@types/node": "25.2.2",
+    "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
     "babel-plugin-react-compiler": "^1.0.0",
     "concurrently": "^9.1.2",
     "css-loader": "^7.1.2",
-    "eslint": "9.39.2",
+    "eslint": "10.0.0",
     "eslint-config-next": "16.1.6",
     "sass": "^1.97.3",
     "style-loader": "^4.0.0",
-    "typescript": "5.9.3"
+    "typescript": "^5.9.3"
   }
 }
