--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "frontend-ts",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "private": true,
   "scripts": {
     "css-fix": "sudo npm i -g style-loader css-loader sass-loader",
     "dev": "concurrently \"zuzjs watch\" \"node zuz.js mode=dev dir=.next.dev\" \"next dev -p 3000 --webpack\"",
     "build": "node zuz.js mode=prod dir=.next.build && next build --webpack",
     "start": "next start -p 3000",
-    "lint": "next lint",
-    "prepare": "husky"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/js-cookie": "3.0.6",
     "@zuzjs/core": "^0.3.2",
-    "@zuzjs/hooks": "^0.1.2",
+    "@zuzjs/hooks": "^0.1.3",
     "@zuzjs/store": "^0.1.6",
-    "@zuzjs/ui": "^1.0.5",
+    "@zuzjs/ui": "^1.0.7",
     "js-cookie": "^3.0.5",
     "next": "16.1.6",
     "react": "^19.2.3",
